--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@
     border-radius: 9px;
 }
 .background{
-    background: rgb(0, 0, 0, 0.5) url("../img/logo2.jpg");
+    background: rgb(0, 0, 0, 0.5) url("logo2.jpg");
     background-size: cover;
     background-blend-mode: darken;
 }
